--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 html {
   /*background: url('./assets/background.png') no-repeat center center fixed;*/
-  background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
+  background: url('https://github.com/KREISER97/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/twilight.jpeg?raw=true') no-repeat center center fixed;
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -14,14 +14,15 @@ h1 {
   text-align: center;
   font-size: 90px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: white;
+  color: rgb(99, 255, 47);
   -webkit-text-stroke: 2px black;
 }
 
 h2 {
   text-align: center;
   font-size: 40px;
-  color: white;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  color: rgb(99, 255, 47);
   -webkit-text-stroke: 1px black;
 }
 
@@ -31,7 +32,7 @@ h2 {
 }
 
 #timer{
-    color: white;
+    color: rgb(99, 255, 47);
 }
 
 .grid {
@@ -40,7 +41,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  /*cursor: url('./assets/mallet.png'), pointer;*/
+  cursor: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mallet.png?raw=true"), pointer;
 }
 
 .hole {
@@ -65,7 +66,7 @@ h2 {
 
 .mole {
   /*background:url('./assets/mole.png') bottom center no-repeat;*/
-  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
+  background:url('https://github.com/KREISER97/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/zombie.png?raw=true') bottom center no-repeat;
   background-size: 40%;
   position: absolute;
   top: 100%;
