--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 html {
   /*background: url('./assets/background.png') no-repeat center center fixed;*/
-  background: url('https://github.com/KREISER97/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/twilight.jpeg?raw=true') no-repeat center center fixed;
+  background-color: rgb(89, 85, 94);
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -14,15 +14,15 @@ h1 {
   text-align: center;
   font-size: 70px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: rgb(99, 255, 47);
-  -webkit-text-stroke: 2px black;
+  color: rgb(159, 181, 151);
+  -webkit-text-stroke: 2px white;
 }
 
 h2 {
   text-align: center;
   font-size: 30px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: rgb(99, 255, 47);
+  color: rgb(159, 181, 151);
   -webkit-text-stroke: 1px black;
 }
 
@@ -32,7 +32,7 @@ h2 {
 }
 
 #timer{
-    color: rgb(99, 255, 47);
+    color: rgb(159, 181, 151);
 }
 
 .grid {
